Font change and 'how to play'

--- a/templates/home.html
+++ b/templates/home.html
@@ -19,4 +19,8 @@
         </select>
         <button type="submit">Start Battle</button>
     </form>
+    
+    <div class="how-to-play-section">
+        <a href="{{ url_for('how_to_play') }}"><button>How to Play</button></a>
+    </div>
 {% endblock %}
