--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 
     <h2>Choose Your Game Mode:</h2>
 
-    <a href="{{ url_for('home', mode='single') }}"><button>Single Round</button></a> <br><br>
+    <a href="{{ url_for('home', mode='single') }}"><button>Single Round</button></a>
 
     <h2>Battle a Bot:</h2>
     <form action="{{ url_for('battle') }}" method="post">
